# sound_velocity_sensor

./: README.md
dll/hydra-svm-math/: CMakeLists.txt
dll/hydra-svm-math/include/: defines.h  hydra-svm-math.h  hydra-svm-measure.h  hydra-svm.h  hydra-types.h
dll/hydra-svm-math/source/: hydra-svm-math.c  hydra-svm-measure.c  hydra-svm.c
dll/hydra_svm_math/: CMakeLists.txt
dll/hydra_svm_math/include/: defines.h  hydra_svm_math.h  types.h
dll/hydra_svm_math/source/: hydra_svm_math.cpp
matlab/: hydra_svm_algoritm.mlx  myfile.txt  myfile_.txt  test_gauss.m  test_hydra_svm_math.m
matlab/functions/: crosscorrelation.m  crosscorrelation_fi.m  fir.fcf  fir.m  precisely_index_max_v0.m  precisely_index_max_v1.m  test_fir.m  test_otr.asv  test_otr.m  xcorr_time.m  xcorr_time_fi.m
matlab/images/: input_signal.tif  input_signal_offset.tif
matlab/output/: hydra_svm_algoritm.html  hydra_svm_algoritm_v1.html
matlab/output/hyperlink/: crosscorrelation.m  hydra_svm_math.cpp  hydra_svm_math_v1.cpp  precisely_index_max_v1.m
